FIX - Banner was breaking on firefox. flexbox quirk wasn't rendering  percentage margins.

--- a/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
+++ b/src/assets/toolkit/styles/6-components/_components.strip-banner.scss
@@ -94,7 +94,8 @@
 
 		@include media( $desktop-and-bigger ) {
 			figure {
-				
+				display: block;
+
 				figcaption {
 					margin-bottom: 1em;
 					margin-top: 10%;
